translate to English

--- a/dataset-builder/tools/tools for dataset final - 20200112.ipynb
+++ b/dataset-builder/tools/tools for dataset final - 20200112.ipynb
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "# gera 8 linhas de handmade\n",
+    "# generates 8 linhas de handmade\n",
     "#\n"
    ]
   },
@@ -1091,7 +1091,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "#  gera sintetizados até a quantidade min(qtd*1.20, 250)\n",
+    "#  generates sintetizados até a quantidade min(qtd*1.20, 250)\n",
     "#"
    ]
   },
@@ -1517,7 +1517,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "# gera dados a partir das partes\n",
+    "# generates dados a partir das partes\n",
     "#"
    ]
   },
@@ -2246,7 +2246,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "# gera imagem montada, mas com sequencia validad e jogo\n",
+    "# generates imagem montada, mas com sequencia validad e jogo\n",
     "#\n",
     "def get_30k_pgn():\n",
     "\n",
@@ -2403,7 +2403,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "# gera imagem montada, mas com sequencia validad e jogo\n",
+    "# generates imagem montada, mas com sequencia validad e jogo\n",
     "#\n",
     "def get_random_cut_for( w):\n",
     "    f= word_cuts[w][random.randrange( 0, len( word_cuts[w]))]\n",
@@ -3136,7 +3136,7 @@
    "outputs": [],
    "source": [
     "#\n",
-    "# gera random por fontes sinteticas\n",
+    "# generates random por fontes sinteticas\n",
     "#"
    ]
   },
