--- a/notebooks/level-0--v97exp_8lines_try13_finetune_32k_1010!!!.ipynb
+++ b/notebooks/level-0--v97exp_8lines_try13_finetune_32k_1010!!!.ipynb
@@ -307,13 +307,13 @@
     "\n",
     "  # Choose the top 5000 words from the vocabulary\n",
     "  print( 'building...')\n",
-    "  top_k = NUM_OF_WORDS   # para ajustar ao modelo antigo...\n",
+    "  top_k = NUM_OF_WORDS   # to fit the old model...\n",
     "  tokenizer = tf.keras.preprocessing.text.Tokenizer(num_words=top_k,\n",
     "                                                    oov_token=\"<unk>\",\n",
     "                                                    filters= ' ')\n",
     "                                                    # filters='!\"#$%&()*+.,-/:;=?@[\\]^_`{|}~ ')\n",
     "\n",
-    "  #forca a usar sempre uma lista com todas as words com 1 ocorrecia de cada word\n",
+    "  #force to always use a list with all words with 1 occurrence of each word\n",
     "  tokenizer.fit_on_texts(labels)\n",
     "  tokenizer.word_index['<pad>'] = 0\n",
     "  tokenizer.index_word[0] = '<pad>'\n",
@@ -368,10 +368,10 @@
     "\tlabels= [cleanup( x).lower() for x in labels]\n",
     "\tlabels= ['<start> ' + label + ' <end>' for label in labels]\n",
     "\n",
-    "\t# poderia ser menor... mas pega os primeiros 10. Nem precisava restringir...\n",
+    "\t# It could be smaller ... but it takes the first 10. I didn't even have to restrict ...\n",
     "\tlabels= [label.split()[0:32] for label in labels]\n",
     "\n",
-    "\t# somente uma parte por enquanto\n",
+    "\t# Only one part for now\n",
     "\tif SAMPLED:\n",
     "\t\tn= int( len( image_files)*0.5); \n",
     "\t\timage_files= image_files[0:n]\n",
@@ -427,8 +427,8 @@
     "#\n",
     "image_model = tf.keras.applications.VGG19(include_top=False,\n",
     "                                                weights='imagenet',\n",
-    "                                                input_shape= (575, 677, 3))  # => gera (16, 19, 2048)\n",
-    "                                                # input_shape= (900, 678, 3))  # => gera (16, 19, 2048)\n",
+    "                                                input_shape= (575, 677, 3))  # => generates (16, 19, 2048)\n",
+    "                                                # input_shape= (900, 678, 3))  # => generates (16, 19, 2048)\n",
     "                                                # O input shape nao é obrigatorio, mas setando dá para\n",
     "                                                # ver o tamanho do output\n",
     "new_input = image_model.input\n",
@@ -519,7 +519,7 @@
    },
    "outputs": [],
    "source": [
-    "# -1 gera (None, 18, 21, 512)\n",
+    "# -1 generates (None, 18, 21, 512)\n",
     "ATTENTION_SHAPE= (17, 21) #(28,21)\n",
     "FEATURES_SHAPE = 512\n",
     "ATTENTION_FEATURES_SHAPE = ATTENTION_SHAPE[0]*ATTENTION_SHAPE[1]  #16*19   # 308\n"
@@ -596,7 +596,7 @@
     "  \n",
     "\n",
     "def build_dataset( img_names, label_indexes):\n",
-    "  # deixa no mesmo tamanho, maximo 32\n",
+    "  # Leaves the same size, maximum 32\n",
     "  label_indexes= [label[:32] for label in label_indexes]\n",
     "  label_indexes= tf.keras.preprocessing.sequence.pad_sequences(label_indexes, padding='post')\n",
     "\n",
